- SERVER-2751: BinData Asserts and crashes shell